--- a/Задание.ipynb
+++ b/Задание.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        " ['04000000', '']]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
     "#Вставляем элементы из curr_level_nodes в hierarchy_parsed в нужно порядке\n",
     "#То есть с индексом i+1, где i - индекс родителя\n",
     "#Элементы высшего уровня иерархии просто вставляем (сортировка уже сделана)\n",
-    "        if level == 0\n",
+    "        if level == 0:\n",
     "            hierarchy_parsed.insert(i, [elem, level])\n",
     "#Если node имеет родителя, то для него определяем parentID и вставляем элемент в hierarchy_parsed \n",
     "        else:\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
